syntax = "proto3";

package spine.core;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.core";
option java_outer_classname = "DiagnosticsProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

import "spine/core/actor_context.proto";
import "spine/core/version.proto";

// An identifier of a message dispatched to an entity.
//
// May represent either an event or a command.
//
message Qualifier {
    option (is).java_type = "io.spine.core.QualifierMixin";

    google.protobuf.Any id = 1 [(required) = true, (validate) = true];

    string type_url = 2 [(required) = true];

    core.Version version = 3 [(required) = false, (validate) = true];
}

// An origin of a message.
//
// Describes the message chain which led to the associated message to be produced.
//
message Origin {
    option (is).java_type = "io.spine.core.OriginMixin";

    // The qualifier of the direct parent of the message.
    Qualifier qualifier = 1 [(required) = true, (validate) = true];

    // The origin of the direct parent of the message.
    Origin grand_origin = 2 [(required) = false, (validate) = true];

    // The actor of the message.
    //
    // The actor context is shared between all the messages in the chain.
    //
    ActorContext actor_context = 3 [(validate) = true];
}
